; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/power/extr_snapshot.c_memory_bm_pfn_present.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/power/extr_snapshot.c_memory_bm_pfn_present.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.memory_bitmap = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.memory_bitmap*, i64)* @memory_bm_pfn_present to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @memory_bm_pfn_present(%struct.memory_bitmap* %0, i64 %1) #0 {
  %3 = alloca %struct.memory_bitmap*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.memory_bitmap* %0, %struct.memory_bitmap** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load %struct.memory_bitmap*, %struct.memory_bitmap** %3, align 8
  %8 = load i64, i64* %4, align 8
  %9 = call i32 @memory_bm_find_bit(%struct.memory_bitmap* %7, i64 %8, i8** %5, i32* %6)
  %10 = icmp ne i32 %9, 0
  %11 = xor i1 %10, true
  %12 = zext i1 %11 to i32
  ret i32 %12
}

declare dso_local i32 @memory_bm_find_bit(%struct.memory_bitmap*, i64, i8**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
